--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+body {
+    padding-top: 80px;
+}
+
 .home {
     background: url("/img/home.jpg");
     background-size: cover; 
@@ -7,6 +11,10 @@
     height: 100vh; 
     width: 100%;
     overflow: hidden; 
+}
+
+.questions{
+	color: white;
 }
 
 .error-404 {
