--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,16 +1,34 @@
 <div th:fragment="navbar">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-		<button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse"
-			data-bs-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler ms-3" type="button"
+			data-bs-toggle="collapse" data-bs-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false"
+			aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse ms-3" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link"
-					th:href="@{/}">Home</a></li>
-				<li class="nav-item"><a class="nav-link"
-					th:href="@{/edificios/todos}">Extensión de países</a></li>
+				<li class="nav-item active"><a class="nav-link" th:href="@{/}">Home</a></li>
+				<li class="nav-item dropdown"><a
+					class="nav-link dropdown-toggle" href="#" id="questionsDropdown"
+					role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Questions </a>
+					<ul class="dropdown-menu" aria-labelledby="questionsDropdown">
+						<li><a class="dropdown-item" th:href="@{/question/all}">View
+								All Questions</a></li>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li><a class="dropdown-item" th:href="@{/question/new/single-question}">Add
+								New Question</a></li>
+						<li><a class="dropdown-item" th:href="@{/question/new/question-file}">Add
+								Question File</a></li>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li><a class="dropdown-item" th:href="@{/question/stats}">Question
+								Statistics</a></li>
+					</ul></li>
 			</ul>
 		</div>
 	</nav>
