--- a/src/main/resources/templates/add-question-file.html
+++ b/src/main/resources/templates/add-question-file.html
@@ -5,15 +5,17 @@
 <body class="bg-dark questions">
 	<div th:replace="~{fragments/navbar :: navbar}"></div>
 
-	<main class="container mt-5">
-		<h1>Cargar archivo JSON de Preguntas</h1>
+	<main class="container mt-5 text-center">
+		<h1 class="mb-5">Cargar archivo JSON de Preguntas</h1>
+		<h3 class="mb-5" th:text="${lastId == 0} ? 'Actualmente no hay preguntas, el primer ID debería ser el 1' 
+		: 'ID de la última pregunta de la base de datos: '+ ${lastId}"></h3>
 		<form method="post" action="/question/upload"
 			enctype="multipart/form-data">
 			<div>
-				<label for="file">Selecciona un archivo JSON:</label> <input
-					type="file" id="file" name="file" accept=".json" required>
+				<input class="btn btn-light" type="file" id="file" name="file"
+					accept=".json" required>
 			</div>
-			<button type="submit">Subir</button>
+			<button class="mt-5 btn btn-light" type="submit">Subir</button>
 		</form>
 		<p th:if="${message}" th:text="${message}"></p>
 	</main>
