--- a/src/main/resources/templates/question-info.html
+++ b/src/main/resources/templates/question-info.html
@@ -31,55 +31,60 @@
 				<div>
 
 					<div th:if="${question.tipoDePregunta.name() == 'TRUE_OR_FALSE'}">
-						<p>
-							<strong>Respuesta:</strong> <span
-								th:text="${question.answer ? 'Verdadero' : 'Falso'}"></span>
-						</p>
-					</div>
-
-					<div
-						th:if="${question.tipoDePregunta.name() == 'SINGLE_CHOICE' or question.tipoDePregunta.name() == 'MULTIPLE_CHOICE'}">
-						<table class=" mb-5 table table-striped table-bordered">
+					<table class="table table-striped table-bordered">
 							<thead>
 								<tr>
-									<th>Respuesta A</th>
-									<th>Respuesta B</th>
-									<th>Respuesta C</th>
-									<th>Respuesta D</th>
+									<th>Respuesta Correcta</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td
-										th:text="${question.answers[0] != null ? question.answers[0] : 'Respuesta no disponible'}"></td>
-									<td
-										th:text="${question.answers[1] != null ? question.answers[1] : 'Respuesta no disponible'}"></td>
-									<td
-										th:text="${question.answers[2] != null ? question.answers[2] : 'Respuesta no disponible'}"></td>
-									<td
-										th:text="${question.answers[3] != null ? question.answers[3] : 'Respuesta no disponible'}"></td>
+								
+									<td	th:text="${question.answer ? 'Verdadero' : 'Falso'}"></td>
 								</tr>
 							</tbody>
 						</table>
-						<p th:if="${question.tipoDePregunta.name() == 'SINGLE_CHOICE'}">
-							<strong>Respuesta correcta:</strong> <span
-								th:text="${question.correctAnswer}"></span>
-						</p>
-						<div th:if="${question.tipoDePregunta.name() == 'MULTIPLE_CHOICE'}">
-							<strong>Respuestas correctas:</strong> 
-							<ul>
-								<li th:text="${question.correctAnswer}"></li>
-								<li th:text="${question.correctAnswer2}"></li>
-							</ul>
-								
-						</div>
+
+					</div>
+
+					<div
+						th:if="${question.tipoDePregunta.name() == 'MULTIPLE_QUESTION'}">
+						<table class="mb-5 table table-striped table-bordered">
+							<thead>
+								<tr>
+									<th>Respuestas Incorrectas</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="incorrectAnswer : ${question.incorrectAnswers}">
+									<td
+										th:text="${incorrectAnswer != null ? incorrectAnswer : 'Respuesta no disponible'}"></td>
+								</tr>
+							</tbody>
+						</table>
+
+						<table class="table table-striped table-bordered">
+							<thead>
+								<tr>
+									<th>Respuestas Correctas</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="correctAnswer : ${question.correctAnswers}">
+									<td
+										th:text="${correctAnswer != null ? correctAnswer : 'Respuesta no disponible'}"></td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
+		</div>
 
 		</div>
 		<p th:if="${question == null}">No hay ninguna pregunta disponible
 			con ese ID.</p>
+			
+			<a th:href="@{/question/all}" class="mt-5 btn btn-light fw-bold">Volver</a>
 	</main>
 
 	<div th:replace="~{fragments/scripts :: scripts}"></div>
