filtering by category included and change in ID generation

--- a/src/main/resources/templates/question-info.html
+++ b/src/main/resources/templates/question-info.html
@@ -84,7 +84,7 @@
 		<p th:if="${question == null}">No hay ninguna pregunta disponible
 			con ese ID.</p>
 			
-			<a th:href="@{/question/all}" class="mt-5 btn btn-light fw-bold">Volver</a>
+			<a th:href="@{/question/all}" class="mb-5 btn btn-light fw-bold">Volver a la lista principal</a>
 	</main>
 
 	<div th:replace="~{fragments/scripts :: scripts}"></div>
