--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -4,30 +4,50 @@
 
 <body class="bg-dark questions">
 	<div th:replace="~{fragments/navbar :: navbar}"></div>
-		
-	 <main class="container mt-5">
-        <h2>Listado de Preguntas</h2>
 
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Pregunta</th>                 
-                    <th>Categoría</th>
-                    <th>Tipo de Pregunta</th>                    
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="question : ${questions}">
-                    <td> <a th:href="@{/question/{id}(id=${question.id})}" class="text-reset" role="button"> <span th:text="${question.id}"></span></a></td>
-                    <td th:text="${question.question}"></td>
-                    <td th:text="${question.category}"></td>
-                    <td th:text="${question.tipoDePregunta.translate}"></td>                
-                </tr>
-            </tbody>
-        </table>
-    </main>
-	
-	<div th:replace="~{fragments/scripts :: scripts}"></div>	
+	<div th:if="${message}" class="alert alert-success" role="alert">
+		<span th:text="${message}"></span>
+	</div>
+
+	<main class="container mt-5">
+		<h2>Listado de Preguntas</h2>
+
+		<p class="mt-5" th:if="${questions.isEmpty()}">No hay ninguna pregunta disponible
+			con ese ID.</p>
+
+		<table th:if="${!questions.isEmpty()}" class="table table-striped table-bordered">
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Pregunta</th>
+					<th>Categoría</th>
+					<th>Tipo de Pregunta</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="question : ${questions}">
+					<td><a th:href="@{/question/id/{id}(id=${question.id})}"
+						class="text-reset" role="button"> <span
+							th:text="${question.id}"></span></a></td>
+					<td th:text="${question.question}"></td>
+					<td><a
+						th:href="@{/question/category/{category}(category=${question.category})}"
+						class="text-reset" role="button"><span
+							th:text="${question.category}"></span></a></td>
+					<td th:text="${question.tipoDePregunta.translate}"></td>
+				</tr>
+			</tbody>
+		</table>
+
+		<p th:if="${activateBackButton}">
+			<a th:href="@{/question/all}" class="mb-5 btn btn-light fw-bold">Volver
+				a la lista principal</a>
+		</p>
+
+
+
+	</main>
+
+	<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
