--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,7 +19,7 @@
 						<li>
 							<hr class="dropdown-divider">
 						</li>
-						<li><a class="dropdown-item" th:href="@{/question/new/single-question}">Add
+						<li><a class="dropdown-item" th:href="@{/question/new}">Add
 								New Question</a></li>
 						<li><a class="dropdown-item" th:href="@{/question/new/question-file}">Add
 								Question File</a></li>
