--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -5,8 +5,12 @@
 <body class="bg-dark questions">
 	<div th:replace="~{fragments/navbar :: navbar}"></div>
 
-	<div th:if="${message}" class="alert alert-success" role="alert">
-		<span th:text="${message}"></span>
+	<div th:if="${success}" class="alert alert-success" role="alert">
+		<span th:text="${success}"></span>
+	</div>
+	
+		<div th:if="${error}" class="alert alert-danger" role="alert">
+		<span th:text="${error}"></span>
 	</div>
 
 	<main class="container mt-5">
