--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -38,7 +38,7 @@
 						th:href="@{/question/category/{category}(category=${question.category})}"
 						class="text-reset" role="button"><span
 							th:text="${question.category}"></span></a></td>
-					<td th:text="${question.tipoDePregunta.translate}"></td>
+					<td th:text="${question.typeOfQuestion.translate}"></td>
 				</tr>
 			</tbody>
 		</table>
