--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,42 +1,46 @@
 <div th:fragment="navbar">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <button class="navbar-toggler ms-3" type="button"
-        data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse ms-3" id="navbarNav">
-        <!-- Navigation -->
-        <ul class="navbar-nav">
-            <li class="nav-item active"><a class="nav-link" th:href="@{/}">Home</a></li>
-            <li class="nav-item active"><a class="nav-link" th:href="@{/question/all}">Questions</a></li>
-            <li class="nav-item active"><a class="nav-link" th:if="${user == null}" th:href="@{/oauth2/authorization/google}">Login</a></li>
-            <li class="nav-item dropdown" ><a
-                class="nav-link dropdown-toggle" href="#" id="questionsDropdown"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Administration </a>
-                <ul class="dropdown-menu" aria-labelledby="questionsDropdown">
-                    <li><a class="dropdown-item" th:href="@{/question/new}">Add New Question</a></li>
-                    <li><a class="dropdown-item" th:href="@{/question/new/question-file}">Add Question File</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" th:href="@{/}">Question Statistics</a></li>
-                </ul>
-            </li>
-        </ul>
-        <!-- User -->
-        <ul class="navbar-nav ms-auto me-5" th:if="${user != null}">
-            <li class="nav-item dropdown"><a
-                class="nav-link dropdown-toggle" href="#" id="userDropdown"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <span th:text="${user.name}"></span>
-            </a>
-                <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                    <li><a class="dropdown-item" th:href="@{/profile}">Profile</a></li>
-                    <li><a class="dropdown-item" href="#" onclick="logout()">Logout</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-</nav>
+		<button class="navbar-toggler ms-3" type="button"
+			data-bs-toggle="collapse" data-bs-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse ms-3" id="navbarNav">
+			<!-- Navigation -->
+			<ul class="navbar-nav">
+				<li class="nav-item active"><a class="nav-link" th:href="@{/}">Home</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					th:href="@{/question/all}">Questions</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					th:if="${user == null}" th:href="@{/oauth2/authorization/google}">Login</a></li>
+				<li class="nav-item dropdown" th:if="${user != null and user.userRole.name() == 'ADMIN'}">
+					<a class="nav-link dropdown-toggle" href="#" id="questionsDropdown"
+					role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Administration </a>
+					<ul class="dropdown-menu" aria-labelledby="questionsDropdown">
+						<li><a class="dropdown-item" th:href="@{/question/new}">Add
+								New Question</a></li>
+						<li><a class="dropdown-item"
+							th:href="@{/question/new/question-file}">Add Question File</a></li>
+						<li><hr class="dropdown-divider"></li>
+						<li><a class="dropdown-item" th:href="@{/}">Question
+								Statistics</a></li>
+					</ul>
+				</li>
+			</ul>
+			<!-- User -->
+			<ul class="navbar-nav ms-auto me-5" th:if="${user != null}">
+				<li class="nav-item dropdown"><a
+					class="nav-link dropdown-toggle" href="#" id="userDropdown"
+					role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						<span th:text="${user.name}"></span>
+				</a>
+					<ul class="dropdown-menu" aria-labelledby="userDropdown">
+						<li><a class="dropdown-item" th:href="@{/profile}">Profile</a></li>
+						<li><a class="dropdown-item" href="#" onclick="logout()">Logout</a></li>
+					</ul></li>
+			</ul>
+		</div>
+	</nav>
 </div>
