--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -8,18 +8,19 @@
 	<div th:if="${success}" class="alert alert-success" role="alert">
 		<span th:text="${success}"></span>
 	</div>
-	
-		<div th:if="${error}" class="alert alert-danger" role="alert">
+
+	<div th:if="${error}" class="alert alert-danger" role="alert">
 		<span th:text="${error}"></span>
 	</div>
 
 	<main class="container mt-5">
 		<h2>Listado de Preguntas</h2>
 
-		<p class="mt-5" th:if="${questions.isEmpty()}">No hay ninguna pregunta disponible
-			con ese ID.</p>
+		<p class="mt-5" th:if="${questions.isEmpty()}">No hay ninguna
+			pregunta disponible con ese ID.</p>
 
-		<table th:if="${!questions.isEmpty()}" class="table table-striped table-bordered">
+		<table th:if="${!questions.isEmpty()}"
+			class="table table-striped table-bordered">
 			<thead>
 				<tr>
 					<th>ID</th>
@@ -34,14 +35,32 @@
 						class="text-reset" role="button"> <span
 							th:text="${question.id}"></span></a></td>
 					<td th:text="${question.question}"></td>
-					<td><a
-						th:href="@{/question/category/{category}(category=${question.category})}"
-						class="text-reset" role="button"><span
-							th:text="${question.category}"></span></a></td>
+					<td>           <a th:href="@{/question/all(page=0, size=10, category=${question.category.name()})}"
+       class="text-reset" role="button"><span
+							th:text="${question.category.name()}"></span></a></td>
 					<td th:text="${question.typeOfQuestion.translate}"></td>
 				</tr>
 			</tbody>
 		</table>
+
+		<nav aria-label="Page navigation" th:if="${!questions.isEmpty()}">
+			<ul class="pagination justify-content-center">
+				<li class="page-item" th:class="${currentPage == 0} ? 'disabled'">
+					<a class="page-link"
+					th:href="@{/question/all(page=${currentPage - 1}, size=${size}, category=${category})}"
+					tabindex="-1">Anterior</a>
+				</li>
+				<li class="page-item" th:each="i : ${pageNumbers}"
+					th:class="${i == currentPage} ? 'active'"><a class="page-link"
+					th:href="@{/question/all(page=${i}, size=${size}, category=${category})}"
+					th:text="${i + 1}"></a></li>
+				<li class="page-item"
+					th:class="${currentPage == totalPages - 1} ? 'disabled'"><a
+					class="page-link"
+					th:href="@{/question/all(page=${currentPage + 1}, size=${size}, category=${category})}">Siguiente</a>
+				</li>
+			</ul>
+		</nav>
 
 		<p th:if="${activateBackButton}">
 			<a th:href="@{/question/all}" class="mb-5 btn btn-light fw-bold">Volver
