--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,11 @@
 
 <body  class="home">
 	<div th:replace="~{fragments/navbar :: navbar}"></div>
+	    <div class="container text-center mt-5">
+        <a href="/game/category" class="btn btn-warning btn-lg">
+            ¡Comenzar partida!
+        </a>
+    </div>
 	<div th:replace="~{fragments/scripts :: scripts}"></div>	
 </body>
 </html>
