--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,7 @@
             ¡Comenzar partida!
         </a>
     </div>
-	<div th:replace="~{fragments/scripts :: scripts}"></div>	
+	<div th:replace="~{fragments/scripts :: scripts}"></div>
+    <script src="/js/snow.js"></script>
 </body>
 </html>
