--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -57,3 +57,9 @@ body {
 .form-check-input:hover {
     background-color: #ffcc00; 
 }
+
+.btn-confirm-logout {
+    background-color:  #ffcc00 !important;
+    color: white !important;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5) !important;
+}
