--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -63,3 +63,18 @@ body {
     color: white !important;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5) !important;
 }
+
+.profile-container {
+  position: relative;
+  text-align: center;
+  margin-top: 50px; 
+}
+
+.profile-image {
+  width: 150px; 
+  height: 150px;
+  border-radius: 50%; 
+  object-fit: cover; 
+  border: 5px solid #ffcc00; 
+  margin-bottom: 20px; 
+}
